src/styles.css
:root{
    --salmon-theme: rgb(255, 162, 151);
    --salmon-hover: rgb(231, 134, 124);
    --light-pink-theme: rgb(255, 230, 230);
    --light-pink-hover: rgb(245, 218, 218);
    --grey-theme: rgb(209, 202, 202);
    --grey-hover: rgb(179, 172, 172);
    --high-priority-theme:rgb(238, 183, 183);
    --medium-priority-theme: rgb(217, 217, 243);
    --low-priority-theme: rgb(176, 230, 176);
}

*, *::before, *::after {
    box-sizing: border-box;
}

* {
    margin: 0;
}

@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

img, picture, video, canvas, svg {
    display: block;
    max-width: 100%;
}

input, button, textarea, select {
    font: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
    overflow-wrap: break-word;
}

p {
    text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
    text-wrap: balance;
}

html,
body{
    height: 100%;
}

body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    display: grid;
    grid-template-columns: 1fr 5fr;
    grid-template-rows: 1fr 7fr;
    overflow: hidden;
}


/* Header Section:: */
#header{
    background: var(--salmon-theme);
    grid-row: 1/2;
    grid-column: 2/3;
    display: flex;
    position: relative;
    align-items: center;
    justify-content: center;
}

#header-options {
    position: absolute;
    top: 10px;
    right: 20px;
    display: flex;
    align-items: center;
    gap: 10px;
}

.header-btn{
    all: unset;
    cursor: pointer;
    font-size: 1.5rem;
    display: flex;
    gap: 8px;
    border-radius: 25px;
    padding: 10px;
}


/* Sidebar Section:: */
#sidebar{
    background: var(--light-pink-theme);
    grid-row: 1/4;
    grid-column: 1/2;
    display: grid;
    grid-template-rows: repeat(3, 1fr);
}

#taskSection,
#serviceSection{
    display: flex;
    flex-direction: column;
    padding: clamp(1rem, 20px, 1.5rem);
    gap: clamp(1rem, 20px, 1.5rem)
}

#projectSection{
    display: flex;
    flex-direction: column;
    padding: clamp(.5rem, 16px, 1.5rem);
    gap: clamp(1rem, 20px, 1.5rem);
}

#addProjects{
    display: flex;
    align-items: center;
    justify-content: space-between;
}

#projectList{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}

.projectItem{
    background: var(--salmon-theme);
    display: flex;
    justify-content: space-between;
    width: 100%;
    max-width: 100%;
    border-radius: 25px;
}

.projectButton{
    background: var(--salmon-theme);
    cursor: pointer;
    font-size: 1.5rem;
    gap: 8px;
    border: none;
    border-radius: 25px;
    padding: 10px;
    flex: 1;
}

.projectButton:hover,
.projectButton.active:hover{
    background: var(--salmon-hover);
}

.projectButton.active{
    background-color: rgb(241, 207, 207);
}

.removeProjectBtn{
    all: unset;
    cursor: pointer;
}

#projectList button{
    font-size: 1.5rem;
}

#serviceSection{
    justify-content: flex-end;
}

#addTaskBtn{
    background: var(--salmon-theme);
}

#addTaskBtn:hover{
    background: var(--salmon-hover);
}

.sidebar-btn{
    all: unset;
    cursor: pointer;
    font-size: 1.5rem;
    display: flex;
    align-items: center;
    gap: 8px;
    border-radius: 25px;
    padding: 10px;
}

.sidebar-btn:hover{
    background: var(--light-pink-hover);
}



/* Main Section:: */
#main {
    display: grid;
    grid-template-columns: 1fr minmax(0, 1200px) 1fr;
    align-items: start;
    height: 100%;
    min-height: 0;
    padding: clamp(1rem, 20px, 1.5rem);
}

#taskArea {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: clamp(1rem, 20px, 1.5rem);
    overflow-y: auto;
    height: 100%;
    min-height: 0;
    margin: 0 20px;
}

#currentProjectLabel {
    grid-column: 1;
    justify-self: center;
}

#taskArea {
    grid-column: 2;
}

#sortOptions {
    grid-column: 3;
    justify-self: center;
}




/* Default Main Section */
.defaultMessageDiv{
    background: var(--light-pink-theme);
    display: flex;
    flex-direction: column;
    gap: clamp(.5rem, 10px, 1rem);
    text-align: center;
    padding: 20px;
}

.defaultButtonsContainer{
    display: flex;
    justify-content: center;
    gap: 10px;
}

.defaultMessageDiv button{
    display: flex;
    align-items: center;
    gap: 5px;
    font-size: clamp(1rem, 20px, 1.5rem);
    border: none;
    border-radius: 10px;
    padding: 8px;
    cursor: pointer;
}

.defaultAddProjectBtn{
    background-color: rgb(15, 202, 15);
}

.defaultAddProjectBtn:hover{
    background-color: rgb(17, 167, 17);
}

.defaultAddTaskBtn{
    background: var(--salmon-theme);
}

.defaultAddTaskBtn:hover{
    background: var(--salmon-hover);
}


/* Create Task Form */
#taskFormModal{
    background: var(--light-pink-theme);
    padding: clamp(1rem, 20px, 1.5rem) clamp(1rem, 20px, 1.5rem) 0 clamp(1rem, 20px, 1.5rem);
    width: 90%;
    max-width: 100%;
    border: 1px var(--salmon-theme) solid;
    border-radius: 15px;
}

#formBox1{
    display: flex;
    flex-direction: column;
    gap: 5px;
    border-bottom: 1px solid var(--salmon-theme);
    padding: 0 5px 10px 5px;
}

#formBox1 input{
    all: unset;
}

#selectionBox{
    display: flex;
    gap: 15px;
}

#formBox2{
    display: flex;
    justify-content: flex-end;
    gap: 10px;
    padding: 10px 5px 5px 5px;
}

#formBox2 button{
    cursor: pointer;
    border: none;
    border-radius: 5px;
    padding: 5px 10px;
    font-weight: 800;
}

.submitFormBtn{
    background: var(--salmon-theme);
}

.submitFormBtn:hover{
    background: var(--salmon-hover);
}

.cancelTaskBtn{
    background: var(--grey-theme);
}


.cancelTaskBtn:hover{
    background: var(--grey-hover);
}



/* Task Items */
.taskItem{
    display: flex;
    background-color: var(--light-pink-theme);
    width: 90%;
    max-width: 100%;
    border: 1px var(--salmon-theme) solid;
    border-radius: 15px;
    padding: clamp(1rem, 20px, 1.5rem) clamp(1rem, 20px, 1.5rem) 5px clamp(1rem, 20px, 1.5rem);
    margin: 5px;
    gap: 15px;
}

.taskItem button{
    border: none;
    padding: 5px 10px;
    font-weight: 800;
    border-radius: 5px;
}

.taskItem button:hover{
    cursor: pointer;
}

.taskItemCompleted{
    background-color: rgb(238, 233, 233);;
}

.taskItemCompleted .taskItemTitle{
    text-decoration: line-through;
}

.completedCheckbox{
    appearance: none;
    width: 18px;
    height: 18px;
    border-radius: 50%;
    border: 2px solid #ccc;
    display: inline-block;
    position: relative;
    cursor: pointer;
}

.completedCheckbox:checked::after{
    content: "";
    position: absolute;
    top: 3px;
    left: 3px;
    width: 8px;
    height: 8px;
    border-radius: 50%;
    background-color: rgb(95, 216, 47);
}

.taskItemInfo{
    display: flex;
    flex-direction: column;
    gap: 5px;
    flex: 1;
}

.taskItemInfo input{
    all: unset;
}

.taskItemSelectionBox{
    display: flex;
    gap: 15px;
}

.taskItemButtons{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.editAndDeleteBtn{
    display: flex;
    align-items: flex-start;
    justify-content: flex-end;
    gap: 10px;
}

.editAndDeleteBtn button{
    all: unset;
    font-size: 1.5rem;
}

.editAndDeleteBtn button:hover{
    cursor: pointer;
}

.deleteTaskBtn i{
    color: red;
}

.editTaskBtn i{
    color: var(--salmon-theme)
}

.editTaskButtonContainer{
    display: flex;
    gap: 10px;
}

.cancelEditBtn{
    background: var(--grey-theme);
}

.cancelEditBtn:hover{
    background: var(--grey-hover);
}

.saveEditBtn{
    background: var(--salmon-theme);
}

.saveEditBtn:hover{
    background-color: rgb(231, 134, 124);
}



/* Create Project Form */
#projectFormOverlay{
    background-color: rgba(167, 164, 164, 0.719);
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    width: 100%;
}

#projectFormModal{
    background: var(--light-pink-theme);
    padding: clamp(1rem, 20px, 1.5rem);
    border: 1px var(--salmon-theme) solid;
    border-radius: 15px;
}

#projectForm{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}

#projectForm input{
    all: unset;
    text-align: center;
}

#projectBtnContainer{
    display: flex;
    gap: 10px;
}




/* Priority CSS */
select:hover{
    cursor: pointer;
}

.prioritySelector option{
    color: white;
    text-align: center;
}

.prioritySelector option:nth-child(2){
    background-color: red;
}

.prioritySelector option:nth-child(3){
    background-color: blue;
}

.prioritySelector option:nth-child(4){
    background-color: green;
}

.taskItem.highPriority{
    border: 1px solid red;
    box-shadow: 0px 0px 15px 1px var(--high-priority-theme);;
}

.taskItem.mediumPriority{
    border: 1px solid blue;
    box-shadow: 0px 0px 15px 1px var(--medium-priority-theme);
}

.taskItem.lowPriority{
    border: 1px solid green;
    box-shadow: 0px 0px 15px 1px var(--low-priority-theme);
}

.completedCheckbox.highPriority{
    background-color: var(--high-priority-theme);;
    border-color: red;
}

.completedCheckbox.mediumPriority{
    background-color: var(--medium-priority-theme);
    border-color: blue;
}

.completedCheckbox.lowPriority{
    background-color: var(--low-priority-theme);
    border-color: green;
}



/* Editing CSS */
.taskItem .editControls{
    display: none;
}

.taskItem.editing .editControls{
    display: flex;
}

.taskItem .taskItemPriority{
    display: none;
}

.taskItem.editing .taskItemPriority{
    display: inline-block;
}

